# ai-software-delivery-pipeline

./: .env.example  .gitignore  CLAUDE.md  README.md  benchmark_user_messages.py  pyproject.toml  run_report_example.md
examples/: generate_report.py  run_batch.py  run_shipping.py  run_shipping_once.py  run_shopping_cart.py  run_ticket_task.py
reports/: example_failure_analysis_iter1.json  example_quality_report_iter2.json  example_run_report.md  example_summary.json  hard_benchmark_latest.md
src/: agent_nodes.py  state_models.py  utils.py
src/ai_delivery/: __init__.py
src/ai_delivery/agents/: critic.py  developer.py  failure_analyzer.py  orchestrator.py  tester.py
src/ai_delivery/execution/: pytest_runner.py
src/ai_delivery/llm/: base.py  mock_client.py  openai_client.py
src/ai_delivery/models/: execution_result.py  failure_analysis.py  failure_trace.py  generated_artifact.py  quality_report.py  task_spec.py
src/ai_delivery/pipeline/: run.py  run_once.py
src/ai_delivery/prompts/: critic_prompts.py  developer_prompts.py  failure_analyzer_prompts.py  orchestrator_prompts.py  task_context.py  tester_prompts.py
src/ai_delivery/reporting/: report_generator.py
